# Anweddol-client

./: .readthedocs.yaml  CODEMAP.md  CONTRIBUTING  LICENSE  MANIFEST.in  README.md  anwdlclient-uninstall  anwdlclient-uninstall.bat  pyproject.toml  setup.py  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
anwdlclient/: __init__.py  cli.py  config.py  utilities.py
anwdlclient/core/: client.py  crypto.py  sanitization.py  sanitize.py  util.py  utilities.py
anwdlclient/tools/: access_token.py  accesstk.py  credentials.py
anwdlclient/web/: client.py
docs/: README.md  make.sh
docs/source/: conf.py  contribute.md  index.md
docs/source/developer_section/: index.md
docs/source/developer_section/api_references/core/: client.md  cryptography.md  sanitization.md  utilities.md
docs/source/developer_section/api_references/tools/: access_token.md  accesstk.md  credentials.md
docs/source/developer_section/api_references/web/: client.md
docs/source/developer_section/cli/: json_output.md
docs/source/developer_section/examples/: basic_client.md  custom_verb_usage.md
docs/source/technical_specifications/: index.md
docs/source/technical_specifications/core/: client_authentication.md  communication.md
docs/source/technical_specifications/tools/: access_token.md  credentials.md
docs/source/technical_specifications/web/: rest_api.md
docs/source/usage_guide/: access_token.md  client_usage.md  credentials.md  index.md  installation.md  troubleshooting.md
resources/: config.yaml
(+4 files in other folders)
