[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["anwdlclient", "anwdlclient.core", "anwdlclient.tools"]

[project]
name = "anwdlclient"
version = "1.1.1"
description = "The Anweddol client implementation"
authors = [
  { name="The Anweddol project", email="the-anweddol-project@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Topic :: Internet",
  "Topic :: System :: Emulators",
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
  "cryptography",
  "cerberus",
  "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/the-anweddol-project/Anweddol-client"
"Bug Tracker" = "https://github.com/the-anweddol-project/Anweddol-client/issues"

[project.scripts]
anwdlclient = "anwdlclient.cli:MainAnweddolClientCLI"